# Hybrid-Optimizer

./: .gitignore  CIFAR_adam_with_sam.py  CIFAR_adam_with_sam_Forced_Switch.py  CIFAR_adam_with_sam_ver07.py  ImageNet_adam_with_sam.py  Makefile  README.md  SVHN_adam_with_sam.py  pyproject.toml
.omc/sessions/: eec76387-2480-41e1-8724-24fc20026726.json
.omc/state/: idle-notif-cooldown.json
common/: augmentation.py  config.py  custom_data_loader.py  model.py  optimizer.py  switcher.py  train_flow.py
scripts/: pc-watch.sh  server-sync.sh
variation/: CIFAR_adam_with_sam_ver02.py  CIFAR_adam_with_sam_ver03.py  CIFAR_adam_with_sam_ver04.py  CIFAR_adam_with_sam_ver05.py  CIFAR_adam_with_sam_ver06.py
